# TrackYourLife

./: .env  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  models.rs
src/handlers/: http_server.rs  mod.rs  websocket.rs
