[package]
name = "ylt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3.31"

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
anyhow = "1"
thiserror = "2"
dotenv = "0.15"
chrono = {version = "0.4.41", features = ["serde"]}
actix-web = "4.11.0"
